Add v2 data intelligence features with model-dataset analysis and trend tracking
- Add SQLite database layer (src/db.py) for persistent storage of datasets,
  models, daily stats, and trend data
- Extend HuggingFace scraper with model fetching and dataset extraction from
  model cards, tags, and README content
- Add ModelDatasetAnalyzer to identify high-value datasets used by popular models
- Add TrendAnalyzer for tracking download growth and identifying rising datasets
- Update main.py with CLI args (--no-fetch, --no-models, --no-trends, --quick)
- Add comprehensive test suite (40 tests) for new functionality
- Update config.yaml with database, models, and analysis settings

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,9 @@
 # AI Dataset Radar Configuration
 
+# Database configuration
+database:
+  path: data/radar.db
+
 # Data sources configuration
 sources:
   huggingface:
@@ -17,6 +21,23 @@ sources:
       - cs.CL  # Computation and Language
       - cs.CV  # Computer Vision
       - cs.LG  # Machine Learning
+
+# Model tracking configuration
+models:
+  enabled: true
+  limit: 100  # Number of models to fetch
+  min_downloads: 1000  # Only track models with sufficient popularity
+
+# Analysis configuration
+analysis:
+  trend_days: [7, 30]  # Calculate trends for these periods
+  min_growth_alert: 0.5  # Alert when growth exceeds 50%
+
+# LLM configuration (for future use)
+llm:
+  enabled: false  # Enable in Phase 2
+  provider: anthropic
+  model: claude-3-haiku-20240307
 
 # Filtering options
 filters:
