Add early signal sources: GitHub Trending and HF Daily Papers
Phase 1.5: Expand monitoring to catch datasets earlier

New scrapers:
- GitHubScraper: Monitors trending repos and searches for dataset-related
  repositories using GitHub API and trending page scraping
- HFPapersScraper: Fetches daily papers from HuggingFace Papers page,
  identifies dataset-related papers before they appear on HF Hub

Features:
- Automatic detection of dataset-related content via keywords/topics
- GitHub token support for higher API rate limits
- Integration with existing notification system (console + markdown)
- Comprehensive test coverage (23 new tests)

Discovery timeline improvement:
  Before: HuggingFace Hub (Day 7+) → arXiv (Day 14+)
  After:  GitHub (Day 1-3) → HF Papers (Day 3-7) → existing sources

--- a/config.yaml
+++ b/config.yaml
@@ -22,6 +22,18 @@ sources:
       - cs.CV  # Computer Vision
       - cs.LG  # Machine Learning
 
+  # Early signal sources (Phase 1.5)
+  github:
+    enabled: true
+    limit: 30  # Number of repos to fetch
+    days: 7  # Look back period
+    token: ${GITHUB_TOKEN}  # Optional: for higher rate limits
+
+  hf_papers:
+    enabled: true
+    limit: 50  # Number of papers to fetch
+    days: 7  # Look back period
+
 # Model tracking configuration
 models:
   enabled: true
