Add project-specific .gitignore rules
- Exclude runtime data files (*.json, *.md, *.db in data/)
- Exclude data/pdfs/ and data/reports/ directories
- Add .gitkeep to preserve data/ directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,21 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# ===================
+# Project-specific
+# ===================
+
+# Runtime data (generated files)
+data/*.json
+data/*.md
+data/*.db
+data/pdfs/
+data/reports/
+
+# Keep data directory structure
+!data/.gitkeep
+
+# OS files
+.DS_Store
+Thumbs.db
