feat: Add 14 new blog sources and fix RSS feeds
New sources added:
- US Frontier Labs: OpenAI, Google AI, DeepMind, Meta AI Research
- Chinese AI Labs: Zhipu, Moonshot, 01.AI, SenseTime
- Emerging Labs: Mistral, Cohere, AI21, Together AI
- Research: Stanford HAI, Berkeley BAIR, Allen AI

Fixed RSS feeds:
- DeepMind: use www.deepmind.com/blog/feed
- Meta AI: use research.facebook.com/feed/
- Stanford HAI: use browser scraping

Results: 15 active blogs with 37 articles (was 6/11)

--- a/config.yaml
+++ b/config.yaml
@@ -218,6 +218,70 @@ watched_vendors:
       url: "https://research.baidu.com/Blog"
       type: "scrape"
       selector: "article, [class*='blog'], [class*='post'], [class*='news']"
+    # --- US Frontier Labs ---
+    - name: "OpenAI Blog"
+      url: "https://openai.com/blog"
+      type: "auto"
+      selector: "article, [class*='post'], [class*='blog'], [class*='card']"
+    - name: "Google AI Blog"
+      url: "https://blog.google/technology/ai/"
+      type: "auto"
+      rss_url: "https://blog.google/technology/ai/rss/"
+    - name: "DeepMind Blog"
+      url: "https://www.deepmind.com/blog"
+      type: "auto"
+      rss_url: "https://www.deepmind.com/blog/feed"
+    - name: "Meta AI Research"
+      url: "https://research.facebook.com/"
+      type: "auto"
+      rss_url: "https://research.facebook.com/feed/"
+    # --- Chinese AI Labs ---
+    - name: "Zhipu AI"
+      url: "https://www.zhipuai.cn/news"
+      type: "browser"
+      selector: "article, [class*='news'], [class*='post'], [class*='card']"
+    - name: "Moonshot AI"
+      url: "https://www.moonshot.cn/"
+      type: "browser"
+      selector: "article, [class*='news'], [class*='post'], [class*='blog']"
+    - name: "01.AI Yi"
+      url: "https://www.01.ai/blog"
+      type: "auto"
+      selector: "article, [class*='post'], [class*='blog'], [class*='card']"
+    - name: "SenseTime Research"
+      url: "https://www.sensetime.com/cn/news-detail"
+      type: "browser"
+      selector: "article, [class*='news'], [class*='post'], [class*='list']"
+    # --- Emerging Labs ---
+    - name: "Mistral AI"
+      url: "https://mistral.ai/news/"
+      type: "auto"
+      selector: "article, [class*='post'], [class*='news'], [class*='card']"
+    - name: "Cohere Blog"
+      url: "https://cohere.com/blog"
+      type: "auto"
+      selector: "article, [class*='post'], [class*='blog'], [class*='card']"
+    - name: "AI21 Labs"
+      url: "https://www.ai21.com/blog"
+      type: "auto"
+      selector: "article, [class*='post'], [class*='blog'], [class*='card']"
+    - name: "Together AI"
+      url: "https://www.together.ai/blog"
+      type: "auto"
+      selector: "article, [class*='post'], [class*='blog'], [class*='card']"
+    # --- Research Institutions ---
+    - name: "Stanford HAI"
+      url: "https://hai.stanford.edu/news"
+      type: "browser"
+      selector: "article, [class*='news'], [class*='post'], [class*='card']"
+    - name: "Berkeley BAIR"
+      url: "https://bair.berkeley.edu/blog/"
+      type: "auto"
+      rss_url: "https://bair.berkeley.edu/blog/feed.xml"
+    - name: "Allen AI Blog"
+      url: "https://allenai.org/blog"
+      type: "browser"
+      selector: "article, [class*='post'], [class*='blog'], [class*='card']"
 
 # =============================================================================
 # 关注的数据类型 | Priority Data Types
