fix: Improve blog scraping for anchor-based selectors
- Handle anchor elements directly as article links
- Add deduplication by URL in scrape_with_browser
- Fix Tencent click-through for items without child links
- Update Scale AI, Mistral AI, Cohere selectors
- Update Allen AI, Stanford HAI to browser mode

Results: 17 active blogs with 56 articles (was 6/11)

--- a/config.yaml
+++ b/config.yaml
@@ -196,8 +196,8 @@ watched_vendors:
       rss_url: "https://huggingface.co/blog/feed.xml"
     - name: "Scale AI"
       url: "https://scale.com/blog"
-      type: "auto"
-      selector: "article, .blog-post, [class*='post'], [class*='article']"
+      type: "browser"
+      selector: "a[href*='/blog/']"
     - name: "Snorkel AI"
       url: "https://snorkel.ai/blog/"
       type: "auto"
@@ -211,9 +211,9 @@ watched_vendors:
       type: "browser"
       selector: ".blog-item"
     - name: "DeepSeek"
-      url: "https://www.deepseek.com/zh"
-      type: "scrape"
-      selector: "a[href*='/blog'], [class*='news'], [class*='post'], article"
+      url: "https://api-docs.deepseek.com/news"
+      type: "browser"
+      selector: "a[href*='/news'], article, [class*='post']"
     - name: "Baidu AI Research"
       url: "https://research.baidu.com/Blog"
       type: "scrape"
@@ -255,12 +255,12 @@ watched_vendors:
     # --- Emerging Labs ---
     - name: "Mistral AI"
       url: "https://mistral.ai/news/"
-      type: "auto"
-      selector: "article, [class*='post'], [class*='news'], [class*='card']"
+      type: "browser"
+      selector: "a[href*='/news/']"
     - name: "Cohere Blog"
       url: "https://cohere.com/blog"
-      type: "auto"
-      selector: "article, [class*='post'], [class*='blog'], [class*='card']"
+      type: "browser"
+      selector: "[class*='h-full'] a[href*='/blog/']"
     - name: "AI21 Labs"
       url: "https://www.ai21.com/blog"
       type: "auto"
@@ -281,7 +281,7 @@ watched_vendors:
     - name: "Allen AI Blog"
       url: "https://allenai.org/blog"
       type: "browser"
-      selector: "article, [class*='post'], [class*='blog'], [class*='card']"
+      selector: "a[href*='/blog/']"
 
 # =============================================================================
 # 关注的数据类型 | Priority Data Types
